# src/main/java/io/github/meixxi/zplbox/controller/v1/Html2ZplController.java
@@ -3,6 +3,7 @@ package io.github.meixxi.zplbox.controller.v1;
 import io.github.meixxi.zplbox.controller.util.Responses;
 import io.github.meixxi.zplbox.controller.v1.model.HtmlRenderingParams;
 import io.github.meixxi.zplbox.service.image.ImageService;
+import io.github.meixxi.zplbox.service.print.PrintService;
 import io.github.meixxi.zplbox.service.render.HtmlRenderService;
 import io.github.meixxi.zplbox.service.zpl.ZplService;
 import io.github.meixxi.zplbox.util.Urls;
@@ -11,10 +12,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
@@ -41,6 +39,9 @@ public class Html2ZplController {
 
     @Autowired
     private ZplService zplService;
+
+    @Autowired
+    private PrintService printService;
 
     @PostMapping(value = "", consumes = APPLICATION_JSON_VALUE, produces = {TEXT_PLAIN_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
     public ResponseEntity<?> createZplLabel(@RequestBody HtmlRenderingParams htmlRenderingParams, HttpServletRequest httpServletRequest) throws IOException {
@@ -78,6 +79,48 @@ public class Html2ZplController {
             }
         }
     }
+
+    @PostMapping(value = "/print/{tcpAddress}", consumes = APPLICATION_JSON_VALUE, produces = {APPLICATION_PROBLEM_JSON_VALUE})
+    public ResponseEntity<?> createSendZplLabel(@PathVariable String tcpAddress, @RequestBody HtmlRenderingParams htmlRenderingParams, HttpServletRequest httpServletRequest) throws IOException {
+        log.info("New request 'Create and Send ZPL Label' has been received...");
+        URI sourceUri = null;
+
+        try {
+
+            // normalize url
+            sourceUri = Urls.normalize(htmlRenderingParams.getUrl(), htmlRenderingParams.getDataBase64());
+            log.info("Process file '{}'...", sourceUri);
+
+            // render web content
+            BufferedImage bufferedImage = htmlRenderService.render(sourceUri, htmlRenderingParams.getWidthPts(), htmlRenderingParams.getHeightPts());
+            log.info("WebContent has been rendered successfully.");
+
+            // convert to monochrome
+            bufferedImage = imageService.convertToMonochrome(bufferedImage);
+            log.info("Rendered image has been converted to monochrome.");
+
+            // create ZPL data
+            String zplData = zplService.createLabel(bufferedImage);
+            log.info("ZPL Data has been created.");
+
+            // forward to tcp
+            URI uri = new URI("tcp://" + tcpAddress);
+            printService.printLabel(zplData, uri.getHost(), uri.getPort());
+
+            // return zpl data
+            return Responses.createOkResponse();
+
+        } catch (Exception ex) {
+            return Responses.createBadRequestResponse(httpServletRequest, ex);
+
+        } finally {
+            if(sourceUri != null && Objects.equals(sourceUri.getScheme(), "file")) {
+                Files.delete(Path.of(sourceUri));
+                log.info("File '{}' has been cleaned.", sourceUri);
+            }
+        }
+    }
+
 
     @PostMapping(value = "/render", consumes = APPLICATION_JSON_VALUE, produces = {IMAGE_PNG_VALUE, APPLICATION_PROBLEM_JSON_VALUE})
     public ResponseEntity<?> renderHtml(@RequestBody HtmlRenderingParams renderingParams, HttpServletRequest httpServletRequest) throws IOException {
